[gd_scene load_steps=18 format=2]

[ext_resource path="res://Imagens/Corpo.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Corpo.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Fumou.gd" type="Script" id=3]
[ext_resource path="res://Scripts/UpgradesBotao.gd" type="Script" id=4]
[ext_resource path="res://Scripts/VoltarTelaInicial.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.352941, 0.0862745, 0.517647, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.74902, 0.2, 0.2, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.74902, 0.2, 0.2, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.74902, 0.2, 0.2, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.74902, 0.2, 0.2, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.74902, 0.2, 0.2, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 1, 0, 0, 1 )

[node name="Corpo" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Corpo" type="Sprite" parent="."]
position = Vector2( 665, 371 )
scale = Vector2( 1.41712, 1.46 )
texture = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 580.0
margin_top = 304.0
margin_right = 640.0
margin_bottom = 324.0
text = "pulmão"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 597.0
margin_top = 366.0
margin_right = 650.0
margin_bottom = 386.0
text = "Fígado"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_left = 504.0
margin_top = 478.0
margin_right = 544.0
margin_bottom = 498.0
text = "Pele"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_bottom = 1.0
margin_top = -1.0
margin_right = 268.0
custom_styles/panel = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradesBot" type="Button" parent="Panel"]
margin_left = 34.0
margin_top = 34.0
margin_right = 234.0
margin_bottom = 112.0
custom_styles/hover = SubResource( 6 )
custom_styles/normal = SubResource( 1 )
text = "UPGRADES"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="Panel"]
margin_left = 34.0
margin_top = 150.0
margin_right = 234.0
margin_bottom = 228.0
rect_pivot_offset = Vector2( 71, 78 )
custom_styles/hover = SubResource( 7 )
custom_styles/normal = SubResource( 2 )
text = "TBD"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="Panel"]
margin_left = 34.0
margin_top = 266.0
margin_right = 234.0
margin_bottom = 344.0
custom_styles/hover = SubResource( 8 )
custom_styles/normal = SubResource( 3 )
text = "TBD"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button6" type="Button" parent="Panel"]
margin_left = 34.0
margin_top = 382.0
margin_right = 234.0
margin_bottom = 460.0
rect_pivot_offset = Vector2( 1916, 368 )
custom_styles/hover = SubResource( 9 )
custom_styles/normal = SubResource( 4 )
text = "TBD"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Voltar à tela inicial" type="Button" parent="Panel"]
margin_left = 34.0
margin_top = 498.0
margin_right = 234.0
margin_bottom = 576.0
rect_pivot_offset = Vector2( 71, 78 )
custom_styles/hover = SubResource( 10 )
custom_styles/normal = SubResource( 5 )
text = "VOLTAR À TELA INICIAL"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Probody" type="RichTextLabel" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -31.0
margin_top = 5.0
margin_right = 31.0
margin_bottom = 23.0
bbcode_text = "Probody"
text = "Probody"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="Fumante" type="RichTextLabel" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -408.0
margin_top = 22.0
margin_right = -259.0
margin_bottom = 40.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 12 )
text = "O Corpo fumou cigarro"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Panel/UpgradesBot" to="Panel/UpgradesBot" method="_on_Upgrades_pressed"]
[connection signal="pressed" from="Panel/Voltar à tela inicial" to="Panel/Voltar à tela inicial" method="_on_Voltar__tela_inicial_pressed"]
[connection signal="timeout" from="Timer" to="Fumante" method="_on_Timer_timeout"]
